objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ZI__c</fullName>
        <inlineHelpText>ZoomInfo additional, alternative domains</inlineHelpText>
        <label>ZI-Company Other Domains</label>
        <length>32072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <label>ARR_Delete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <label>MRR (OLD)_DELETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>Full List of CB Tags: https://docs.google.com/spreadsheets/d/1erIdqoy60JwLAnpb91EfoJV5YrXDnbwSaA-aqcBlw48/edit#gid=1111933207</description>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised__c</fullName>
        <label>Raised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geographic_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Full List: https://docs.google.com/spreadsheets/d/1erIdqoy60JwLAnpb91EfoJV5YrXDnbwSaA-aqcBlw48/edit#gid=1561611259</description>
        <label>Sector</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticker__c</fullName>
        <label>Ticker</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_City__c</fullName>
        <description>Field that captures the previous city value when any field of the Billing Address is updated</description>
        <label>Previous City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Tier__c</fullName>
        <formula>IF( Account_ARR__c &gt;150000,&quot;Tier 1: $150K+&quot;,
IF( Account_ARR__c &gt;75000,&quot;Tier 2: $75K-$149,999&quot;,
IF( Account_ARR__c &gt;30000,&quot;Tier 3: $30K-$74,999&quot;,
IF( Account_ARR__c &gt;10000,&quot;Tier 4: $10K-$29,999&quot;,
IF( Account_ARR__c &gt; 0,&quot;Tier 5: &lt;$10K&quot;,
IF( Max_ARR__c &gt; 150000,&quot;Tier 1: $150K+&quot;,
IF( Max_ARR__c &gt;75000,&quot;Tier 2: $75K-$149,999&quot;,
IF( Max_ARR__c &gt;30000,&quot;Tier 3: $30K-$74,999&quot;,
IF( Max_ARR__c &gt;10000,&quot;Tier 4: $10K-$29,999&quot;,
IF( Max_ARR__c &gt; 0,&quot;Tier 5: &lt;$10K&quot;,
&quot;&quot;))))))))))</formula>
        <inlineHelpText>Customer Success Tier depending on the Account ARR.
Tier 5: &lt;$10k
Tier 4: $10K-$30K
Tier 3: $30-$75K
Tier 2: $75-$150K
Tier 1: &gt;$150K</inlineHelpText>
        <label>CS Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_ARR__c</fullName>
        <inlineHelpText>Max ARR on Churned Customers</inlineHelpText>
        <label>Max ARR</label>
        <summarizedField>Project__c.Prior_ARR__c</summarizedField>
        <summaryFilterItems>
            <field>Project__c.Current_Backend_Stage__c</field>
            <operation>equals</operation>
            <value>Expired Contract,Churned Customer, Deleted</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Trainer on the CS team</inlineHelpText>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsvGsw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSM_Team__c</fullName>
        <formula>IF(
OR(
AND(
CONTAINS( Customer_Status__c , &quot;Churn&quot;),
ISBLANK(Success_Manager__c)
),
AND(
CONTAINS(Customer_Status__c, &quot;Customer&quot;),
ISBLANK(Success_Manager__c)
)
),
&quot;Digital-CSM&quot;,
TEXT(Success_Manager__r.Team__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_Notes__c</fullName>
        <label>DQ Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Full List: https://docs.google.com/spreadsheets/d/1erIdqoy60JwLAnpb91EfoJV5YrXDnbwSaA-aqcBlw48/edit#gid=1561611259</description>
        <label>Industry*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <description>Account owner user id, returns the same value as OwnerId</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account owner user id</inlineHelpText>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CS Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DQ_Status__c</fullName>
        <formula>IF(Isblank(DQ_Last_Updated__c),&quot;Not Completed&quot;,
IF(Today() - DQ_Last_Updated__c &gt; 183,&quot;Expired&quot; ,&quot;Completed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The status of Data Quality updates: &lt;6 months are considered up to date, more than 6 months, expired</inlineHelpText>
        <label>DQ Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags_copy__c</fullName>
        <description>Field that copies the information that&apos;s in Tags__c field. Updated with a workflow rule and used in a formula field for Digital First vs Digital Transformation called Product Type. This field is also used as a datapoint for territory carving. Admin only field.</description>
        <label>Tags (copy)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Country__c</fullName>
        <description>Field that captures the previous country value when any field of the Billing Address is updated</description>
        <label>Previous Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indexed_At__c</fullName>
        <label>Indexed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTC_Offset__c</fullName>
        <label>UTC Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZI_Ranking__c</fullName>
        <inlineHelpText>ZoomInfo Ranking (e.g. Inc 500)</inlineHelpText>
        <label>ZI-Ranking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ARR__c</fullName>
        <label>Account ARR</label>
        <summarizedField>Project__c.ARR_New__c</summarizedField>
        <summaryFilterItems>
            <field>Project__c.ARR_New__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated automatically by a PB, if Owner = AE that has SDR on the user record, then populates Account SDR, if Owner of the account does not have a SDR, automation nulls this field.</description>
        <inlineHelpText>SDR assigned to the accounts for the AE owned accounts</inlineHelpText>
        <label>Account SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prospecting_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <inlineHelpText>admin only notes field</inlineHelpText>
        <label>Admin Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To_Delete</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bad_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Most often email providers, garbage data, etc.</inlineHelpText>
        <label>Bad Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Churn_Date1__c</fullName>
        <formula>IF(Datevalue(Max_Subscription_End_Date__c)-today() &lt; -42735, null,
IF(Datevalue(Max_Subscription_End_Date__c) - today()+1 &lt; 0, Datevalue(Max_Subscription_End_Date__c),null))</formula>
        <inlineHelpText>Date of Churn from the latest ETL end date on a project</inlineHelpText>
        <label>Churn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <inlineHelpText>Competitors</inlineHelpText>
        <label>Competitors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ARR__c</fullName>
        <description>Rollup from Project ARR</description>
        <label>ARR</label>
        <summarizedField>Project__c.ARR_New__c</summarizedField>
        <summaryFilterItems>
            <field>Project__c.ARR_New__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReOrg_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Temp Field for ReOrg Summer 2020</inlineHelpText>
        <label>ReOrg Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_premise__c</fullName>
        <label>Sub-premise</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Industry__c</fullName>
        <label>ZI-Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Tech_Aha__c</fullName>
        <label>ZI-Tech-Aha</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <description>Sales Manual Entry Fields to Prioritize Accounts</description>
        <inlineHelpText>Use this field to tier your accounts.</inlineHelpText>
        <label>Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CB_Employees__c</fullName>
        <inlineHelpText>Clearbit Employees</inlineHelpText>
        <label>CB Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Heap__c</fullName>
        <label>CB-Tech-Heap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Jira__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-Tech-Jira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Miro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-Tech-Miro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_TAM__c</fullName>
        <formula>Product_Managers_at_Company__c - of_paid_users__c</formula>
        <inlineHelpText>PMs found at company - Current Purchased Makers</inlineHelpText>
        <label>Customer TAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Founded_Year__c</fullName>
        <label>Founded Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <description>Field that returns the Account Owner&apos;s Sales Region value. Used in reports/dashboards</description>
        <formula>TEXT( Owner.Sales_Region__c )</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_SDR_ID__c</fullName>
        <formula>IF(Owner.IsActive &amp;&amp; Owner.SDR__r.IsActive, 
Owner.SDR__r.Id,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Owner&apos;s SDR UserID</inlineHelpText>
        <label>Owner SDR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Digital - SaaS</fullName>
                </value>
                <value>
                    <fullName>Digital - Mobile App</fullName>
                </value>
                <value>
                    <fullName>Digital - eCommerce</fullName>
                </value>
                <value>
                    <fullName>Digital - Marketplace single-sided</fullName>
                </value>
                <value>
                    <fullName>Digital - Marketplace multi-sided</fullName>
                </value>
                <value>
                    <fullName>Digital - Internal tool</fullName>
                </value>
                <value>
                    <fullName>Digital - PaaS</fullName>
                </value>
                <value>
                    <fullName>Digital - Security</fullName>
                </value>
                <value>
                    <fullName>Digital - Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDR_Holdback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SDR Holdback Accounts for territory transition in Q1 2021</inlineHelpText>
        <label>SDR Holdback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_industry__c</fullName>
        <description>Full List: https://docs.google.com/spreadsheets/d/1erIdqoy60JwLAnpb91EfoJV5YrXDnbwSaA-aqcBlw48/edit#gid=1561611259</description>
        <label>Sub-industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technologies__c</fullName>
        <label>Technologies</label>
        <length>45000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Temp_Segment__c</fullName>
        <description>Field used only during times when segment definition is changing. Allows for us to see which accounts will move in a re-segmentation exercise. Admin only. Last updated with re-segmentation from July 2022.</description>
        <formula>/*IF( Bad_Account__c ||
( Website = &quot;&quot; &amp;&amp; NumberOfEmployees &lt;0) , &quot;Unknown&quot;,
IF( Max_Employees__c &lt; 51,&quot;ESB&quot;,

IF( Max_Employees__c &lt; 501,&quot;SMB&quot;,
IF( Max_Employees__c &lt; 5001,&quot;MM&quot;,&quot;EN&quot;))))*/

IF( Bad_Account__c ||  
( Website  = &quot;&quot; &amp;&amp; NumberOfEmployees &lt;0) , &quot;Unknown&quot;,

IF( Max_Employees__c &lt; 51,&quot;ESB&quot;, 

IF( 
CASE( BillingCountry, 
&quot;Guadeloupe&quot;,1,
&quot;Afghanistan&quot;,1,
&quot;Antigua and Barbuda&quot;,1,
&quot;Aruba&quot;,1,
&quot;Bahamas&quot;,1,
&quot;Barbados&quot;,1,
&quot;British Virgin Islands&quot;,1,
&quot;Cayman Islands&quot;,1,
&quot;Cuba&quot;,1,
&quot;Dominica&quot;,1,
&quot;Dominican Republic&quot;,1,
&quot;Grenada&quot;,1,
&quot;Guyana&quot;,1,
&quot;Haiti&quot;,1,
&quot;Jamaica&quot;,1,
&quot;Montserrat&quot;,1,
&quot;Saint Kitts and Nevis&quot;,1,
&quot;Saint Lucia&quot;,1,
&quot;Saint Vincent and the Grenadines&quot;,1,
&quot;Trinidad and Tobago&quot;,1,
&quot;Turks and Caicos&quot;,1,
&quot;Puerto Rico&quot;,1,
&quot;Belize&quot;,1,
&quot;Costa Rica&quot;,1,
&quot;El Salvador&quot;,1,
&quot;Guatemala&quot;,1,
&quot;Honduras&quot;,1,
&quot;Nicaragua&quot;,1,
&quot;Panama&quot;,1,
&quot;Bermuda&quot;,1,
&quot;Mexico&quot;,1,
&quot;Argentina&quot;,1,
&quot;Bolivia&quot;,1,
&quot;Chile&quot;,1,
&quot;Colombia&quot;,1,
&quot;Ecuador&quot;,1,
&quot;Paraguay&quot;,1,
&quot;Peru&quot;,1,
&quot;Suriname&quot;,1,
&quot;Uruguay&quot;,1,
&quot;Venezuela&quot;,1,
&quot;French Guiana&quot;,1,
&quot;Curacao&quot;,1,
&quot;Bangladesh&quot;,1,
&quot;Bhutan&quot;,1,
&quot;India&quot;,1,
&quot;Kazakhstan&quot;,1,
&quot;Kyrgyzstan&quot;,1,
&quot;Maldives&quot;,1,
&quot;Nepal&quot;,1,
&quot;Pakistan&quot;,1,
&quot;Sri Lanka&quot;,1,
&quot;Turkmenistan&quot;,1,
&quot;Uzbekistan&quot;,1,
&quot;China&quot;,1,
&quot;Hong Kong&quot;,1,
&quot;Japan&quot;,1,
&quot;Mongolia&quot;,1,
&quot;South Korea&quot;,1,
&quot;Taiwan&quot;,1,
&quot;Cambodia&quot;,1,
&quot;Indonesia&quot;,1,
&quot;Laos&quot;,1,
&quot;Malaysia&quot;,1,
&quot;Myanmar&quot;,1,
&quot;Philippines&quot;,1,
&quot;Singapore&quot;,1,
&quot;Thailand&quot;,1,
&quot;Vietnam&quot;,1,
&quot;Papua New Guinea&quot;,1,
&quot;Tonga&quot;,1,
&quot;Cocos (Keeling) Islands&quot;,1,
&quot;Australia&quot;,1,
&quot;New Zealand&quot;,1,
&quot;Canada&quot;,1,
&quot;US Virgin Islands&quot;,1,
&quot;United States&quot;,1,
&quot;American Samoa&quot;,1,0) = 1,
IF(Max_Employees__c &lt; 1001, &quot;SMB&quot;, &quot;EN&quot;),
 
IF(Max_Employees__c &lt; 501,&quot;SMB&quot;,  

IF(Max_Employees__c &lt; 5001,&quot;MM&quot;,&quot;EN&quot;)))))</formula>
        <label>Temp Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>AE assigned to this sales territory</inlineHelpText>
        <label>Territory AE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <description>Looks up the name of the Trainer for the Vitally Integration</description>
        <formula>Trainer__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks up the name of the Trainer for the Vitally Integration</inlineHelpText>
        <label>Trainer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Employees__c</fullName>
        <inlineHelpText>ZoomInfo Employees</inlineHelpText>
        <label>ZI-Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZI_Investors__c</fullName>
        <label>ZI-Investors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZI_Tech_Jira__c</fullName>
        <inlineHelpText>ZoomInfo: Has Jira</inlineHelpText>
        <label>ZI-Tech-Jira</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Tech_SFDC__c</fullName>
        <inlineHelpText>ZoomInfo: Has Salesforce</inlineHelpText>
        <label>ZI-Tech-SFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Live_Opps__c</fullName>
        <label># of Live Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pb_Use_Cases__c</fullName>
        <label>pb Use Cases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal tools</fullName>
                </value>
                <value>
                    <fullName>Operational improvements (internal)</fullName>
                </value>
                <value>
                    <fullName>External product</fullName>
                </value>
                <value>
                    <fullName>Understanding user needs</fullName>
                </value>
                <value>
                    <fullName>Prioritization</fullName>
                </value>
                <value>
                    <fullName>Roadmapping</fullName>
                </value>
                <value>
                    <fullName>Collaboration improvements</fullName>
                </value>
                <value>
                    <fullName>Jira integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <description>Power of 1 Formula for Reporting &amp; Calculations</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of 1 Formula for Reporting &amp; Calculations</inlineHelpText>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Azure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-Tech-Azure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type-Delete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DQ_Specialist__c</fullName>
        <label>DQ Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DQ_Specialist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geo_Territory__c</fullName>
        <inlineHelpText>Territory based on Geo and Employee # only, might be different from assigned territory</inlineHelpText>
        <label>Geo Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_status__c</fullName>
        <label>Health Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Dark</fullName>
                </value>
                <value>
                    <fullName>Churned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Employees__c</fullName>
        <formula>IF(Bad_Account__c,0,
IF( Employee_Size_Override__c &gt; 0, Employee_Size_Override__c,
NumberOfEmployees ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>0 if bad account, employee Size override if available, otherwise use standard employee field.</inlineHelpText>
        <label>Estimated Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Pipeline__c</fullName>
        <label>Open Pipeline</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>2.0 Consult, 3.0 Prove, 4.0 Proposal, 5.0 Closing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>standard</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Overage_Terms__c</fullName>
        <description>Contracted overage terms for invoiced customers (customers with a space contract)</description>
        <inlineHelpText>Contracted overage terms for invoiced customers (customers with a space contract)</inlineHelpText>
        <label>Overage Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Numbers__c</fullName>
        <label>Phone Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_s_MRR__c</fullName>
        <label>MRR</label>
        <summarizedField>Project__c.MRR__c</summarizedField>
        <summaryFilterItems>
            <field>Project__c.MRR__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Referenceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referenceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Number__c</fullName>
        <label>Street Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Email__c</fullName>
        <formula>Trainer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trainer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Title__c</fullName>
        <label>Website Title_Delete</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZI_Run_Enrich__c</fullName>
        <formula>If( DOZISF__ZoomInfo_Id__c =&quot;&quot; &amp;&amp;  NumberOfEmployees &gt; 249, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ZoomInfo Workaround for Enrichment Runs</inlineHelpText>
        <label>ZI-Run Enrich?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZI_Technology__c</fullName>
        <inlineHelpText>ZoomInfo technology Stack</inlineHelpText>
        <label>ZI-Technology</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_paid_users__c</fullName>
        <inlineHelpText>Sum of # of Current Makers from Projects with &gt;0 MRR</inlineHelpText>
        <label># of purchased makers</label>
        <summarizedField>Project__c.Purchased_Makers__c</summarizedField>
        <summaryFilterItems>
            <field>Project__c.Purchased_Makers__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.0 SDR Prospecting</fullName>
                </value>
                <value>
                    <fullName>2.0 Working</fullName>
                </value>
                <value>
                    <fullName>3.0 Check back - Competition</fullName>
                </value>
                <value>
                    <fullName>3.0 Check back - Budget</fullName>
                </value>
                <value>
                    <fullName>3.0 Check back - Timing</fullName>
                </value>
                <value>
                    <fullName>3.0 Check back - Solution Gap</fullName>
                </value>
                <value>
                    <fullName>4.0 AE Bad Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Cycles__c</fullName>
        <description>Related Projects billing cycles for assigning a renewal manager</description>
        <inlineHelpText>Related Projects billing cycles for assigning a renewal manager</inlineHelpText>
        <label>Billing Cycles</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Tech_Trello__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CB-Tech-Trello</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Tier_Makers__c</fullName>
        <inlineHelpText>Purchased or churned number of makers</inlineHelpText>
        <label>CS Tier Makers</label>
        <summarizedField>Project__c.CS_Tier_Makers__c</summarizedField>
        <summaryForeignKey>Project__c.Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chorus_Tracker__c</fullName>
        <label>Chorus Tracker</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>